applications/xihe/xihe-backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: xihe-backend-service
  namespace: xihe
spec:
  ports:
    - name: httpport1
      port: 80
      targetPort: 8000
    - name: httpport2
      port: 8001
      targetPort: 8001
  selector:
    app: xihe-backend
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xihe-backend
  namespace: xihe
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: xihe-backend
  template:
    metadata:
      labels:
        app: xihe-backend
    spec:
      containers:
      - name: xihe-backend
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe-backend:83591b71115290c4e6654e5aad0fe09b1eea8f28
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 1000m
            memory: 1500Mi
          limits:
            cpu: 1000m
            memory: 2000Mi
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/xihe/kubuconfig
          name: kubeconfig-file
      volumes:
      - name: kubeconfig-file
        secret:
          secretName: xihe-kubeconfig-secret
