applications/xihe/xihe-website.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: xihe-website-service
  namespace: xihe
spec:
  ports:
    - name: httpport
      port: 80
      targetPort: 8080
  selector:
    app: xihe-website
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xihe-website
  namespace: xihe
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: xihe-website
  template:
    metadata:
      labels:
        app: xihe-website
    spec:
      containers:
      - name: xihe-website
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe-website:d5db1de8a592277cb0208e2484f91bffaa19fb42
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: nginx-configmap
        resources:
          requests:
            cpu: 1000m
            memory: 1000Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      volumes:
      - configMap:
          defaultMode: 420
          name: nginx-configmap
        name: nginx-configmap
